<resources>
    <string name="app_name">AkureTechExpo</string>

    <!--    Schedule-->
    <string name="schedule_activity_title">Schedule</string>
    <string name="txt_schedule_info1">Click here to switch to Day 2</string>
    <string name="txt_schedule_info2">Click here to switch to Day 1</string>
    <string name="icon_desc">Related icon will be here</string>
    <string name="txt_registration_title">Registration</string>
    <string name="txt_registration_venue">Speaker Professor Kayode Alese (Professor of Information and Cyber Security FUTA)- Cyber Security Awareness for Businesses.</string>
    <string name="txt_registration_time">8:00 am - 10:00am</string>

    <string name="title_about">About</string>

    <string name="title_map">Map</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_info">Info</string>
    <string name="initiators_title">Initiators</string>
    <string name="txt_company">Company:</string>
    <string name="txt_convener">Convener:</string>
    <string name="txt_company_name">Shokenny Solutions Limited</string>
    <string name="txt_convener_name">Shola Kehinde</string>
    <string name="txt_social_media_title">Social Media</string>
    <string name="hashtags">#AkureTechExpo #ShokennySolutions</string>
    <string name="txt_hashtags">Hashtags</string>
    <string name="btn_post_a_tweet">Post a Tweet</string>

    <string name="txt_about">
        This conference creates a platform to connect Top Tech and business leaders with participants across the country. The conference aims to create an experience for IT and business leaders curious about challenging conventional approaches to technology application in business management and development.
    </string>
    <string name="title_about_akuretechexpo">About Akure Tech Expo</string>
    <string name="logo_image_description">Akure Tech Expo Logo</string>
</resources>
