<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_about">


    <fragment
        android:id="@+id/navigation_about"
        android:name="com.biomanuel97.akuretechexpo.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.biomanuel97.akuretechexpo.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.biomanuel97.akuretechexpo.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />
</navigation>