<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row_one_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="4dp"
    android:paddingEnd="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:id="@+id/row_one_signIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/icon_circular_bg"
                android:contentDescription="@string/icon_desc"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <TextView
            android:id="@+id/programme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txt_registration_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/row_one_signIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/programme_info_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/row_one_signIcon"
            app:layout_constraintTop_toBottomOf="@id/programme_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/programme_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:minLines="2"
                    android:singleLine="false"
                    android:text="@string/txt_registration_venue"
                    android:textColor="@android:color/black"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/programme_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_registration_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/row_one_signIcon"
            app:layout_constraintTop_toBottomOf="@id/programme_info_container" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>