<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView

                    android:id="@+id/header_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/title_info"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:typeface="normal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/title_info" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/initiatives_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:contentPadding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header_cardview">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/initiatives_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:lineSpacingExtra="10sp"
                            android:text="@string/initiators_title"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/initiators_title" />

                        <TextView
                            android:id="@+id/txt_Company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:paddingStart="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/txt_company"
                            android:textAppearance="@style/primaryTextAppearance"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/initiatives_title" />

                        <TextView
                            android:id="@+id/txt_convener"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:paddingStart="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/txt_convener"
                            android:textAppearance="@style/primaryTextAppearance"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txt_Company" />

                        <TextView
                            android:id="@+id/text_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_company_name"
                            app:layout_constraintBaseline_toBaselineOf="@+id/txt_Company"
                            app:layout_constraintStart_toEndOf="@+id/txt_Company" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_convener_name"
                            app:layout_constraintBaseline_toBaselineOf="@+id/txt_convener"
                            app:layout_constraintStart_toEndOf="@+id/txt_convener" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/social_media_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:contentPadding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/initiatives_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/social_media_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:background="@color/colorPrimaryDark"
                            android:drawableStart="@drawable/ic_twitter"
                            android:drawablePadding="4dp"
                            android:drawableTint="@android:color/white"
                            android:padding="8dp"
                            android:text="@string/btn_post_a_tweet"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_hashtags_title" />

                        <TextView
                            android:id="@+id/txt_hashtags_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:paddingStart="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/txt_hashtags"
                            android:textAppearance="@style/primaryTextAppearance"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/social_media_title" />

                        <TextView
                            android:id="@+id/text_hashtags"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hashtags"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintBaseline_toBaselineOf="@+id/txt_hashtags_title"
                            app:layout_constraintStart_toEndOf="@+id/txt_hashtags_title" />

                        <TextView
                            android:id="@+id/social_media_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:lineSpacingExtra="10sp"
                            android:text="@string/txt_social_media_title"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/txt_social_media_title" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/about_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:contentPadding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/social_media_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/about_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:lineSpacingExtra="10sp"
                            android:text="@string/title_about_akuretechexpo"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/title_about_akuretechexpo" />

                        <TextView
                            android:id="@+id/txt_about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|end"
                            android:layout_marginTop="12dp"
                            android:justificationMode="inter_word"
                            android:paddingStart="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/txt_about"
                            android:textAppearance="@style/primaryTextAppearance"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/about_title" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>